test/memory/shannon/memstatFlag.good
memstatFlag.chpl:6: error: printMemStat() only works with the --memstat flag
